# IASEB

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml  table1_finalized.csv  table1_latest.csv
IASEB/: __init__.py  datasets.py  models.py  run_eval.py  utils.py
data/: caption_word_counts.json
results/: entity_level_performance.csv  finegrained_performance.csv
scripts/: aggregate_results.py  colors.py  compute_finegrained_table.py  constants.py  visualize_results.py
slurm/: example_array_job.slurm  example_single_gpu.slurm  mimovl_hcstvg1.slurm  mimovl_hcstvg1_a100.slurm  mimovl_hcstvg2.slurm  mimovl_hcstvg2_a100.slurm  mimovl_mevis.slurm  mimovl_mevis_timing.slurm  mimovl_referral_hcstvg1.slurm  mimovl_referral_hcstvg2.slurm  mimovl_referral_vidstg.slurm  mimovl_referral_vidvrd.slurm  mimovl_rvos.slurm  mimovl_rvos_a100.slurm  mimovl_timing_test.slurm  mimovl_vidstg.slurm  mimovl_vidstg_a100.slurm  mimovl_vidvrd.slurm  mimovl_vidvrd_a100.slurm  qwen3vl_hcstvg1.slurm  qwen3vl_hcstvg2.slurm  qwen3vl_mevis.slurm  qwen3vl_referral_hcstvg1.slurm  qwen3vl_referral_hcstvg1_recovery.slurm  qwen3vl_referral_hcstvg2.slurm  qwen3vl_referral_hcstvg2_recovery.slurm  qwen3vl_referral_vidstg.slurm  qwen3vl_referral_vidstg_recovery.slurm  qwen3vl_referral_vidvrd.slurm  qwen3vl_rvos.slurm  qwen3vl_vidstg.slurm  qwen3vl_vidstg_final_recovery.slurm  qwen3vl_vidstg_recovery.slurm  qwen3vl_vidstg_recovery_gmem48.slurm  qwen3vl_vidstg_timeout_recovery.slurm  qwen3vl_vidstg_timeout_recovery2.slurm  qwen3vl_vidvrd.slurm  (+1 more)
(+11 files in other folders)
